@@ -1,11 +1,12 @@
 package com.an.trailers.ui.search.adapter;
 
 import android.app.Activity;
-import android.support.annotation.NonNull;
-import android.support.v7.widget.RecyclerView;
 import android.util.DisplayMetrics;
 import android.view.LayoutInflater;
 import android.view.ViewGroup;
+
+import androidx.annotation.NonNull;
+import androidx.recyclerview.widget.RecyclerView;
 
 import com.an.trailers.R;
 import com.an.trailers.data.local.entity.MovieEntity;
@@ -68,7 +69,7 @@ public class MovieSearchListAdapter extends RecyclerView.Adapter<MovieSearchList
             activity.getWindowManager().getDefaultDisplay().getMetrics(displayMetrics);
             int width = displayMetrics.widthPixels;
 
-            itemView.setLayoutParams(new RecyclerView.LayoutParams(new Float(width * 0.85f).intValue(),
+            itemView.setLayoutParams(new RecyclerView.LayoutParams(Float.valueOf(width * 0.85f).intValue(),
                     RecyclerView.LayoutParams.WRAP_CONTENT));
         }
 
